2008-07-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Contributed by Ville Voipio:
	patch #6501: New autotools support for avrdude
	* Makefile.am: add @WINDOWS_DIRS@ to SUBDIR
	* bootstrap: allow for autconf-2.61 and automake-1.10, too
	* configure.ac: fix @WINDOWS_DIRS@ recursion, replace
	AC_PROG_CC by AM_PROG_CC_C_O, for esoteric reasons

2008-06-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Contributed by Janos Sallai <janos.sallai@vanderbilt.edu>:
	patch #6074: added support for crossbow's MIB510 programmer
	* avrdude.conf.in: Add entry for mib510.
	* stk500.c: Add special hooks to handle the MIB510 programmer.
	It mostly talks STK500v1 protocol but has a special hello and
	goodbye sequence, and uses a fixed block size of 256 bytes.
	* doc/avrdude.texi: Document support for mib510.

2008-06-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Contributed by Klaus Leidinger <klaus@mikrocontroller-projekte.de>:
	* main.c: Realign verbose messages.
	* avrpart.c: (Ditto.)
	* avr910.c: Print the device code selected in verbose mode.
	* butterfly.c: (Ditto.)

2008-06-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Contributed by Klaus Leidinger <klaus@mikrocontroller-projekte.de>:
	Add check for buffermode feature, and use it if present.  Can be
	turned off using -x no_blockmode.
	* avr910.c: Implement buffermode test and usage.
	* avrdude.1: Document -x no_blockmode.
	* doc/avrdude.texi: (Ditto.)

2008-03-24  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* usb_libusb.c: #undef interface for Win32

2008-03-24  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* avr910.c: Add support for the -x devcode option.
	* avrdude.1: Document -x devcode for avr910.
	* doc/avrdude.texi: (Ditto.)

2008-03-14  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Add initial support for the Atmel STK600, for
	"classic" AVRs (AT90, ATtiny, ATmega) in both,
	ISP and high-voltage programming modes.
	* Makefile.am: Add -lm.
	* avrdude.conf.in: Add stk600, stk600pp, and stk600hvsp.